log/build_2024-12-01_22-44-04/turtle_demo_controller/stderr.log
  File "/home/thedush/ROS2_turtlesim_PID_demo/install/turtle_demo_controller/lib/python3.10/site-packages/turtle_demo_controller/turtle_controller.py", line 75
    whileself.err_theta > math.pi:
                                 ^
SyntaxError: invalid syntax

